[package]
name = "rocksdb-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
json = "0.12.4"
qstring = "0.7.2"
rocksdb = "0.22.0"
serde = {version ="1.0",features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.37.0",features = ["full"]}
