[package]
name = "rocksdb-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rocksdb = "0.22.0"
rstest = "0.19.0"
serde_json = "1.0.115"
env_logger = "*"
threadpool = "1.8.1"